# nixos

./: configuration.nix  flake.nix
.github/workflows/: cachix.yml
home/hosts/: minimal.nix  tarvos.nix
home/modules/: default.nix
home/modules/background-image/: default.nix
home/modules/exa/: default.nix
home/modules/neofetch/: default.nix
home/modules/starship/: default.nix
home/modules/xmodmap/: default.nix
home/modules/zathura/: default.nix
home/profiles/: default.nix
home/profiles/default/: default.nix  fonts.nix  starship.nix
home/profiles/default/zsh/: aliases.nix  completion.zsh  default.nix  keybindings.zsh  plugins.nix  prompt.zsh  settings.zsh
home/profiles/development/: default.nix
home/profiles/emacs/: default.nix
home/profiles/graphical/: alacritty.nix  chromium.nix  default.nix  firefox.nix  zathura.nix
home/profiles/terminal/: default.nix  git.nix  neofetch.conf  tmux.conf  tmux.nix
home/profiles/x11-environment/: default.nix  dunst.nix  picom.nix  polybar.nix  rofi.nix  theme.rasi  unclutter.nix  xmobarrc  xmodmap
home/profiles/x11-environment/taffybar/: LICENSE  taffybar.cabal
home/profiles/x11-environment/taffybar/src/: Main.hs
hosts/: tarvos.nix
hosts/tarvos/: default.nix
nixos/hosts/tarvos/: default.nix  hardware-configuration.nix
nixos/profiles/: default.nix
nixos/profiles/default/: default.nix  networking.nix  users.nix
nixos/profiles/display-server/: default.nix  lightdm-mini-greeter.conf
profiles/: default.nix
profiles/default/: default.nix  users.nix
profiles/x11/: default.nix
(+17 files in other folders)
