cabal-version:       2.4

name:                taffybar-pnotequalnp
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Kevin Mullins
maintainer:          46154511+pnotequalnp@users.noreply.github.com
copyright:           © 2020 Kevin Mullins
category:            System

executable taffybar
  main-is:             Main.hs
  build-depends:       base
                     , taffybar
  hs-source-dirs:      src
  default-language:    Haskell2010
